tests/error/match_errors/unsupported_subject_none.err
Error: Unsupported (at $FILE:7:10)
  | 
5 | def main() -> None:
6 |     n = None
7 |     match n:
  |           ^ Pattern matching on None is not supported

Guppy compilation failed due to 1 previous error
